@@ -4,6 +4,7 @@ Changes in 2.8.10
 -----------------
 - Add School Configuration english & spanish help texts in Help_en.php & Help_es.php
 - Reference the Quick Setup Guide in README.md & INSTALL
+- Update stylesheet_wkhtmltopdf.css
 
 Changes in 2.8.9
 ----------------
